--- a/minesweeper.css
+++ b/minesweeper.css
@@ -8,6 +8,12 @@ body {
   align-items: center;
   justify-content: flex-center;
   flex-direction: column;
+  background-color: rgba(255, 128, 23, 0.726);
+}
+.reset{
+  font-size: 1.5rem;
+  cursor: pointer;
+  font-family: "Comic Sans MS", cursive, sans-serif
 }
 
 #message, #notes {
